Fix profile picture looking squished, issue #1114.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -111,7 +111,7 @@ body {
 }
 
 .oppia-profile-picture-fullsize {
-  height: 180px;
+  height: auto;
   width: 180px;
 }
 
